Refactored case flags for representative